# Yoshi-Trading-System

./: .env.example  .gitignore  CODE_REVIEW.md  FEATURE_GAPS.md  INFORMATION_FLOW_ANALYSIS.md  README.md  REVIEW.md  debug_import.py  get_prediction.py  pyproject.toml  pytest.ini  test_bot_class.py  test_import_break.py  test_token.py  vps_setup.sh
clawdbot/moltbot-repo-scout/: README.md  config.example.yaml  pyproject.toml
yoshi-bot/: .env.example  .gitignore  README.md  check_do_status.py  check_tokens.py  deploy.ps1  get_chat_id.py  get_prediction.py  get_tg_updates.py  pyproject.toml  test_telegram_send.py  test_telegram_token.py  vps_setup.sh
yoshi-bot/config/: params.json
yoshi-bot/configs/: backtest.yaml  backtest_optimized.yaml  coingecko.yaml  continuous_learning.yaml  costs.yaml  crypto_forecasting_taxonomy.yaml  crypto_regime_first.yaml  crypto_rfp_hso.yaml  crypto_source_scanner.yaml  domains.yaml  experiment_hparams.yaml  experiment_improved.yaml  hparams.yaml  llm_review.yaml  models.yaml  moltbot.yaml  regimes.yaml
yoshi-bot/docs/: clawdbot-integration.md  crypto-forecasting-taxonomy-prompt.txt  crypto-forecasting-taxonomy.md  crypto-rfp-hso-developer-spec.md  crypto-rfp-hso-gemini-prompt.txt  crypto-strengthened-approach.md  secrets-and-credentials.md
yoshi-bot/scripts/: benchmark_projectfw.py  bootstrap_signal_learning.py  evaluate_accuracy.py  evaluate_manifold.py  grid_search_forecast.py  kalshi_scanner.py  monitor_vps.py  ralph_loop.sh  run_backtest.py  run_continuous_learning.py  run_crypto_source_scanner.py  run_experiment.py  run_hparams.sh  (+12 more)
(+400 files in other folders)
