[project]
name = "gnosis-particle-bot"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "typer",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "requests",
    "pyyaml",
    "ccxt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
